--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -7,27 +7,23 @@
     
     <link rel="icon" type="image/png" th:href="@{/img/favicon.png}">
     
-    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     
-    <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     
-    <!-- Custom CSS - ORDEN IMPORTANTE -->
     <link rel="stylesheet" th:href="@{/css/custom.css}">
     <link rel="stylesheet" th:href="@{/css/layout.css}">
     <link rel="stylesheet" th:href="@{/css/filters.css}">
     <link rel="stylesheet" th:href="@{/css/tables.css}">
     <link rel="stylesheet" th:href="@{/css/cards.css}">
     <link rel="stylesheet" th:href="@{/css/dark-theme.css}">
+    <link rel="stylesheet" th:href="@{/css/stats.css}">
 </head>
 <body>
-    <!-- Navbar Fragment -->
     <nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{/inmuebles}">
@@ -49,6 +45,11 @@
                             <i class="bi bi-boxes"></i> Propiedades
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/estadisticas}"> 
+                            <i class="bi bi-bar-chart-fill"></i> Estadísticas
+                        </a>
+                    </li>
                     <li class="nav-item d-flex align-items-center ms-lg-3">
                         <div class="theme-switch-wrapper">
                             <i class="bi bi-sun-fill"></i>
@@ -64,7 +65,6 @@
         </div>
     </nav>
 
-    <!-- Messages Fragment -->
     <div th:fragment="messages" class="container mt-3">
         <div th:if="${success}" class="alert alert-success alert-dismissible fade show">
             <i class="bi bi-check-circle-fill"></i> <span th:text="${success}"></span>
@@ -76,7 +76,6 @@
         </div>
     </div>
 
-    <!-- Scripts Fragment -->
     <div th:fragment="scripts">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
         <script>
